--- a/aboutus.html
+++ b/aboutus.html
@@ -23,7 +23,7 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
         <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="./index.html">Ristorante Con Fusion</a>
+        <a class="navbar-brand" href="./index.html"><a class="navbar-brand" href="#"><img src="img/logo.png" height="30" width="41"></a></a>
          <div class="collapse navbar-collapse" id="Navbar">
             <ul class="navbar-nav">
                  <li class="nav-item"><a class="nav-link" href="./index.html"><span class="fa fa-home fa-lg"></span>Home</a></li>
@@ -80,6 +80,18 @@
                                 <dd class="col-6">40</dd>
                            </dl>
                         </div>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <div class="card card-block bg-faded">
+                        <blockquote class="blockquote">
+                            <p class="mb-0">You better cut the pizza in four pieces because
+                                I'm not hungry enough to eat six.</p>
+                            <footer class="blockquote-footer">Yogi Berra,
+                              <cite title="Source Title">The Wit and Wisdom of Yogi Berra,
+                                P. Pepe, Diversion Books, 2014</cite>
+                            </footer>
+                        </blockquote>
                     </div>
                 </div>
         </div>
