--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
     <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="navbar-brand" href="#">Ristorante Con Fusion</a>
+    <a class="navbar-brand" href="#"><a class="navbar-brand" href="#"><img src="img/logo.png" height="30" width="41"></a></a>
      <div class="collapse navbar-collapse" id="Navbar">
         <ul class="navbar-nav">
              <li class="nav-item active"><a class="nav-link" href="./index.html"><span class="fa fa-home fa-lg"></span>Home</a></li>
@@ -42,6 +42,9 @@
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
                 <div class="col col-sm-4">
+                    <div class="col col-sm align-self-center">
+                        <img src="img/logo.png" class="img-fluid">
+                    </div>
                 </div>
             </div>
         </div>
@@ -55,8 +58,17 @@
             </div>
             <!--<div class="col-sm pull-sm-4 col-md pull-md">-->
             <div class="col-sm col-md flex-first">
-                <h2>Uthappizza</h2>
-                <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
+                <div class="media">
+                    <img class="d-flex mr-3 img-thumbnail align-self-center"
+                         src="img/uthappizza.png" alt="Uthappizza">
+                    <div class="media-body">
+                        <h2 class="mt-0">Uthappizza</h2>
+                        <p class="hidden-xs-down">A unique combination of Indian Uthappam (pancake) and
+                          Italian pizza, topped with Cerignola olives, ripe vine
+                          cherry tomatoes, Vidalia onion, Guntur chillies and
+                          Buffalo Paneer.</p>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -66,9 +78,15 @@
                 <h3>This Month's Promotions</h3>
             </div>
             <div class="col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                <div class="media">
+                <div class="media-body">
+                     <h2 class="mt-0 mb-1">Weekend Grand Buffet</h2>
+                     <p class="hidden-xs-down">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                </div>
+                <img class="d-flex ml-3 img-thumbnail align-self-center"
+                     src="img/buffet.png" alt="Alberto Somayya">
             </div>
+        </div>
         </div>
 
         <div class="row row-content align-items-center">
@@ -76,9 +94,19 @@
                 <h3>Meet our Culinary Specialists</h3>
             </div>
             <div class="col-sm col-md flex-first">
-                <h2>Alberto Somayya</h2>
-                <h4>Executive Chef</h4>
-                <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+                <div class="media">
+                    <img class="d-flex mr-3 img-thumbnail align-self-center"
+                         src="img/alberto.png" alt="Alberto Somayya">
+                    <div class="media-body">
+                        <h2 class="mt-0">Alberto Somayya</h2>
+                        <h4>Executive Chef</h4>
+                        <p class="hidden-xs-down">Award winning three-star Michelin chef with wide
+                         International experience having worked closely with
+                         whos-who in the culinary world, he specializes in
+                          creating mouthwatering Indo-Italian fusion experiences.
+                         </p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
