--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
 <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
 <link rel="stylesheet" href="css/bootstrap-social.css">
 <link rel="stylesheet" href="css/styles.css">
+
+	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+	<!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
     <title>Ristorante Con Fusion</title>
+
 </head>
 
 <body>
@@ -37,15 +45,16 @@
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
-                <div class="col-12 col-sm-8">
+                <div class="col-12 col-sm-6">
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col col-sm-4">
-                    <div class="col col-sm align-self-center">
+                    <div class="col-12 col-sm-3 justify-content-center align-self-center">
                         <img src="img/logo.png" class="img-fluid">
                     </div>
-                </div>
+                    <div class="col-12 col-sm-3 justify-content-center align-self-center">
+                        <button type="button" class="btn btn-warning"><a href="#card">Reserve a table </a></button>
+                    </div>
             </div>
         </div>
     </header>
@@ -62,7 +71,9 @@
                     <img class="d-flex mr-3 img-thumbnail align-self-center"
                          src="img/uthappizza.png" alt="Uthappizza">
                     <div class="media-body">
-                        <h2 class="mt-0">Uthappizza</h2>
+                        <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT</span>
+                        <span class="badge badge-pill badge-default">$4.99</span>
+                        </h2>
                         <p class="hidden-xs-down">A unique combination of Indian Uthappam (pancake) and
                           Italian pizza, topped with Cerignola olives, ripe vine
                           cherry tomatoes, Vidalia onion, Guntur chillies and
@@ -72,7 +83,6 @@
             </div>
         </div>
 
-
         <div class="row row-content align-items-center">
             <div class="col-sm-4 col-md-3">
                 <h3>This Month's Promotions</h3>
@@ -80,14 +90,30 @@
             <div class="col-sm col-md">
                 <div class="media">
                 <div class="media-body">
-                     <h2 class="mt-0 mb-1">Weekend Grand Buffet</h2>
-                     <p class="hidden-xs-down">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                    <h2 class="mt-0 mb-1">Weekend Grand Buffet <span class="badge badge-danger">NEW</span>
+                    </h2>
+                    <p class="hidden-xs-down">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
                 </div>
                 <img class="d-flex ml-3 img-thumbnail align-self-center"
                      src="img/buffet.png" alt="Alberto Somayya">
             </div>
         </div>
         </div>
+
+<!--
+        <div class="alert alert-success" role="alert">
+          <strong>Well done!</strong> You successfully read this important alert message.
+        </div>
+        <div class="alert alert-info" role="alert">
+          <strong>Heads up!</strong> This alert needs your attention, but it's not super important.
+        </div>
+        <div class="alert alert-warning" role="alert">
+          <strong>Warning!</strong> Better check yourself, you're not looking too good.
+        </div>
+        <div class="alert alert-danger" role="alert">
+          <strong>Oh snap!</strong> Change a few things up and try submitting again.
+        </div>
+-->
 
         <div class="row row-content align-items-center">
             <div class="col-sm-4 col-md-3 flex-last">
@@ -109,7 +135,65 @@
                 </div>
             </div>
         </div>
-    </div>
+
+        <div class="row row-content align-items-center justify-content-center" id="card">
+                    <div class="col-12 col-sm-8 align-items-center">
+                            <div class="card">
+                                <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
+                                <div class="card-block">
+                                    <dl class="row">
+                                        <dt class="col-12 col-sm-2">Number of Guests</dt>
+                                        <dd class="col-12 col-sm-10">
+                                            <div class="form-check form-check-inline">
+                                              <label class="form-check-label">
+                                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1"> 1
+                                              </label>
+                                            </div>
+                                            <div class="form-check form-check-inline">
+                                              <label class="form-check-label">
+                                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2"> 2
+                                              </label>
+                                            </div>
+                                            <div class="form-check form-check-inline">
+                                              <label class="form-check-label">
+                                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3" > 3
+                                              </label>
+                                            </div>
+                                            <div class="form-check form-check-inline">
+                                              <label class="form-check-label">
+                                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1"> 4
+                                              </label>
+                                            </div>
+                                            <div class="form-check form-check-inline">
+                                              <label class="form-check-label">
+                                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2"> 5
+                                              </label>
+                                            </div>
+                                            <div class="form-check form-check-inline">
+                                              <label class="form-check-label">
+                                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3" > 6
+                                              </label>
+                                            </div>
+                                        </dd>
+                                        <br />
+                                        <dt class="col-12 col-sm-2">Date and Time</dt>
+                                            <div class="col-12 col-sm-4">
+                                                <input type="date" class="form-control" name="date" />
+                                            </div>
+                                            <div class="col-12 col-sm-4">
+                                                <input type="time" class="form-control" name="time">
+                                            </div>
+                                        <br />
+                                        <dt class="col-sm-2"></dt>
+                                        <dd class="col-12 col-sm-10 "><a href="#" class="btn btn-primary">Reserve</a></dd>
+                                   </dl>
+                                </div>
+                            </div>
+
+                        </div>
+        </div>
+        </div>
+
 
     <footer class="footer">
         <div class="container ">
