--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 
 <head>
     <!-- Required meta tags always come first -->
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-<!-- Bootstrap CSS -->
-<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-<link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
-<link rel="stylesheet" href="css/bootstrap-social.css">
-<link rel="stylesheet" href="css/styles.css">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/bootstrap-social.css">
+    <link rel="stylesheet" href="css/styles.css">
 
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -25,22 +25,59 @@
 
 <body>
 
-<nav class="navbar navbar-inverse navbar-toggleable-sm fixed-top">
-    <div class="container">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
-    <span class="navbar-toggler-icon"></span>
-    </button>
-    <a class="navbar-brand" href="#"><a class="navbar-brand" href="#"><img src="img/logo.png" height="30" width="41"></a></a>
-     <div class="collapse navbar-collapse" id="Navbar">
-        <ul class="navbar-nav">
-             <li class="nav-item active"><a class="nav-link" href="./index.html"><span class="fa fa-home fa-lg"></span>Home</a></li>
-             <li class="nav-item"><a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span>About</a></li>
-             <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span>Menu</a></li>
-             <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span>Contact</a></li>
-         </ul>
-     </div>
-    </div>
-</nav>
+    <nav class="navbar navbar-inverse navbar-toggleable-sm fixed-top">
+        <div class="container">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand" href="#"><a class="navbar-brand" href="#"><img src="img/logo.png" height="30" width="41"></a></a>
+         <div class="collapse navbar-collapse" id="Navbar">
+            <ul class="navbar-nav mr-auto">
+                 <li class="nav-item active"><a class="nav-link" href="./index.html"><span class="fa fa-home fa-lg"></span>Home</a></li>
+                 <li class="nav-item"><a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span>About</a></li>
+                 <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span>Menu</a></li>
+                 <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span>Contact</a></li>
+             </ul>
+             <span class="navbar-text nav-item" style="cursor:pointer">
+                 <a data-toggle="modal" data-target="#loginModal">
+                 <span class="fa fa-sign-in"></span> Login</a>
+             </span>
+         </div>
+        </div>
+    </nav>
+
+    <div id="loginModal" class="modal fade" role="dialog">
+       <div class="modal-dialog modal-lg" role="content">
+       <!-- Modal content-->
+       <div class="modal-content">
+           <div class="modal-header">
+               <h4 class="modal-title">Login </h4>
+               <button type="button" class="close" data-dismiss="modal">&times;</button>
+           </div>
+           <div class="modal-body">
+               <form class="form-inline">
+                   <div class="form-group">
+                       <label class="sr-only" for="exampleInputEmail3">Email address</label>
+                       <input type="email" class="form-control form-control-sm mr-1" id="exampleInputEmail3" placeholder="Enter email">
+                   </div>
+                   <div class="form-group">
+                       <label class="sr-only" for="exampleInputPassword3">Password</label>
+                       <input type="password" class="form-control form-control-sm mr-1" id="exampleInputPassword3" placeholder="Password">
+                   </div>
+                   <div class="form-check">
+                       <label class="form-check-label">
+                           <input class="form-check-input" type="checkbox"> Remember me
+                       </label>
+                   </div>
+               </form>
+           </div>
+           <div class="modal-footer">
+               <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">Cancel</button>
+               <button type="submit" class="btn btn-primary btn-sm">Sign in</button>
+           </div>
+       </div>
+       </div>
+   </div>
 
     <header class="jumbotron">
         <div class="container">
@@ -49,11 +86,13 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                    <div class="col-12 col-sm-3 justify-content-center align-self-center">
+                    <div class="col-12 col-sm  align-self-center">
                         <img src="img/logo.png" class="img-fluid">
                     </div>
-                    <div class="col-12 col-sm-3 justify-content-center align-self-center">
-                        <button type="button" class="btn btn-warning"><a href="#card">Reserve a table </a></button>
+                    <div class="col-12 col-sm  align-self-center">
+                        <a type="button" class="btn btn-warning btn-sm btn-block"
+                    data-toggle="tooltip" data-html="true"  title="Or Call us at  <br><strong>+852 12345678</strong>"
+                     data-placement="bottom" href="#reserveform">Reserve</a>
                     </div>
             </div>
         </div>
@@ -189,9 +228,8 @@
                                    </dl>
                                 </div>
                             </div>
-
-                        </div>
-        </div>
+                    </div>
+            </div>
         </div>
 
 
@@ -240,6 +278,11 @@
        <script src="node_modules/jquery/dist/jquery.min.js"></script>
        <script src="node_modules/tether/dist/js/tether.min.js"></script>
        <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+       <script>
+          $(document).ready(function(){
+          $('[data-toggle="tooltip"]').tooltip();
+          });
+       </script>
 </body>
 
 </html>
