--- a/index.html
+++ b/index.html
@@ -233,6 +233,9 @@
                     <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                         <span class="carousel-control-next-icon"></span>
                     </a>
+                    <button class="btn btn-danger btn-sm" id="carousel-button">
+                    	<span id="carousel-button-icon" class="fa fa-pause"></span>
+                    </button>
                 </div>
             </div>
         </div>
@@ -406,6 +409,21 @@
          /* $(document).ready(function(){
           $('[data-toggle="tooltip"]').tooltip();
       }); */
+      $(document).ready(function(){
+                  $("#mycarousel").carousel( { interval: 2000 } );
+                  $("#carousel-button").click(function(){
+                      if ($("#carousel-button").children("span").hasClass('fa-pause')) {
+                          $("#mycarousel").carousel('pause');
+                          $("#carousel-button").children("span").removeClass('fa-pause');
+                          $("#carousel-button").children("span").addClass('fa-play');
+                      }
+                      else if ($("#carousel-button").children("span").hasClass('fa-play')){
+                          $("#mycarousel").carousel('cycle');
+                          $("#carousel-button").children("span").removeClass('fa-play');
+                          $("#carousel-button").children("span").addClass('fa-pause');
+                      }
+                  });
+              });
        </script>
 </body>
 
