--- a/index.html
+++ b/index.html
@@ -40,17 +40,152 @@
                  <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span>Menu</a></li>
                  <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span>Contact</a></li>
              </ul>
+<!--
              <span class="navbar-text nav-item" style="cursor:pointer">
                  <a data-toggle="modal" data-target="#loginModal1">
+                 <span class="fa fa-sign-in"></span> Login</a>
+             </span>
+-->
+             <span class="navbar-text nav-link">
+               <a class="nav-link" id="loginButton">
                  <span class="fa fa-sign-in"></span> Login</a>
              </span>
          </div>
         </div>
     </nav>
 
-    <div id="loginModal1" class="modal fade" role="dialog">
+    <div id="loginModal"class="modal fade" role="dialog">
+
+      <div class="modal-dialog" role="content">
+
+        <div class="modal-content">
+
+          <div id="loginHeader" class="modal-header">
+            <h4 class="modal-title">Login</h4>
+            <button type="button" class="close" id="closeLogin">&times;</button>
+
+          </div>
+
+          <div id="loginBody" class="modal-body">
+            <form class="form-inline">
+              <div class="form-group">
+
+                <label class="sr-only" for="exampleInputEmail3">Email</label>
+                <input type="email" class="form-control form-control-sm mr-1" id="exampleInputEmail3" placeholder="Enter Email">
+
+              </div>
+              <div class="form-group">
+
+                <label class="sr-only" for="exampleInputPassword3">Password</label>
+                <input type="password" class="form-control form-control-sm mr-1" id="exampleInputPassword3" placeholder="Password">
+
+              </div>
+              <div class="form-check">
+
+                <label class="form-check-label">
+                <input class="form-check-input" type="checkbox"> Remember Me
+                </label>
+              </div>
+
+          </div>
+
+          <div id="loginFooter" class="modal-footer">
+
+            <button type="button" id="closeLoginBtn" class="btn btn-default btn-sm">Cancel</button>
+            <button type="submit" class="btn btn-primary btn-sm">Sign In</button>
+
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+
+    <div id="reserveModal" class="modal fade" role="dialog">
+
+      <div class="modal-dialog" role="content">
+
+        <div class="modal-content">
+
+          <div id="reserveContent" class="modal-header">
+            <h4 class="modal-title">Reserve a Table</h4>
+            <button type="button" class="close" id="closeReserve">&times;</button>
+
+          </div>
+
+          <div id="reserveBody" class="modal-body">
+            <form class="form-inline">
+              <div class="form-group input-group">
+              <dl class="row">
+              <dt class="col-2">Number Of Guests </dt>
+              <dd class="col-10">
+                <label class="custom-control custom-radio"><input class="custom-control-input" type="radio" name="optradio"><span class="custom-control-indicator"></span><span class="custom-control-description">1</span></label>
+                <label class="custom-control custom-radio"><input class="custom-control-input" type="radio" name="optradio"><span class="custom-control-indicator"></span><span class="custom-control-description">2</span></label>
+                <label class="custom-control custom-radio"><input class="custom-control-input" type="radio" name="optradio"><span class="custom-control-indicator"></span><span class="custom-control-description">3</span></label>
+                <label class="custom-control custom-radio"><input class="custom-control-input" type="radio" name="optradio"><span class="custom-control-indicator"></span><span class="custom-control-description">4</span></label>
+                <label class="custom-control custom-radio"><input class="custom-control-input" type="radio" name="optradio"><span class="custom-control-indicator"></span><span class="custom-control-description">5</span></label>
+                <label class="custom-control custom-radio"><input class="custom-control-input" type="radio" name="optradio"><span class="custom-control-indicator"></span><span class="custom-control-description">6</span></label>
+              </dd>
+              </dl>
+              </div>
+              <div class="row form-group col">
+                <dl class="row">
+                <dt class="col-6">Section </dt>
+                    <dd class="col-6">
+                      <div class="btn-group" data-toggle="buttons">
+                      <label class="btn btn-success btn-sm">NonSmoking
+                        <input name="section" type="radio" autocomplete="off" checked="true">
+                      </label>
+                      <label class="btn btn-danger btn-sm">Smoking
+                        <input name="section" type="radio" autocomplete="off">
+                      </label>
+                      </div>
+                    </dd>
+                </dl>
+              </div>
+              <div class="form-group row">
+                <dt><label for="date" class="col-md-4 col-form-label">Date and Time</label></dt>
+                <div class="col-12 col-md-5 col-lg-4">
+                  <div class="input-group">
+                    <div class="input-group-addon">
+                      <span class="fa fa-calendar"></span>
+                    </div>
+
+                  <input type="text" class="form-control" id="date" name="date" placeholder="Date">
+                  </div>
+                </div>
+                <div class="col-12 col-md-5 col-lg-4">
+                  <div class="input-group">
+                    <div class="input-group-addon">
+                      <span class="fa fa-clock-o"></span>
+                    </div>
+                    <input type="text" class="form-control" id="time" name="time" placeholder="Time">
+                  </div>
+                </div>
+              </div>
+              <div class="form-group col">
+
+
+              </div>
+
+          </div>
+
+          <div id="reserveFooter" class="modal-footer">
+
+            <button type="button" class="btn btn-default btn-sm" id="closeReserveBtn">Cancel</button>
+            <button type="submit" class="btn btn-primary btn-sm">Reserve</button>
+
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+
+<!--
+    <div id="loginModal" class="modal fade" role="dialog">
        <div class="modal-dialog modal-lg" role="content">
-       <!-- Modal content-->
+
        <div class="modal-content">
            <div class="modal-header">
                <h4 class="modal-title">Login </h4>
@@ -80,7 +215,7 @@
        </div>
        </div>
    </div>
-
+-->
     <header class="jumbotron">
         <div class="container">
 
@@ -92,21 +227,27 @@
                     <div class="col-12 col-sm  align-self-center">
                         <img src="img/logo.png" class="img-fluid">
                     </div>
-             
+
+<!--
                     <div class="col-12 col-sm  align-self-center">
                         <span data-toggle="modal" data-target="#loginModal" type="button"
                         class="btn btn-warning btn-sm btn-block " style="cursor:pointer">
                             Reserve</span>
                     </div>
-
+-->
+                    <div class="col-12 col-sm align-self-center">
+                      <a role="button" id="reserveButton" class="btn btn-block btn-sm nav-link btn-warning"
+                      title="Or Call us at <br><strong>+852 12345678</strong>"
+                      data-placement="bottom" href="#reserve">Make a Reservation</a>
+                    </div>
             </div>
         </div>
     </header>
 
-
+<!--
         <div id="loginModal" class="modal fade" role="dialog">
            <div class="modal-dialog modal-lg" role="content">
-           <!-- Modal content-->
+
            <div class="modal-content">
                <div class="modal-header">
                    <h4 class="modal-title">Reserve a Table </h4>
@@ -181,6 +322,7 @@
            </div>
            </div>
        </div>
+     -->
 
 
     <div class="container">
